@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile install preinst prepare setup unpack
+DEPEND=>=virtual/jdk-1.6 app-arch/unzip dev-java/bcprov:0[test?] dev-java/bcpkix:0[test?] dev-java/sun-jaf:0 dev-java/junit:0 dev-java/oracle-javamail:0 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
+DESCRIPTION=Java cryptography APIs
+EAPI=5
+HOMEPAGE=http://www.bouncycastle.org/java.html
+IUSE=elibc_FreeBSD doc source test elibc_FreeBSD
+KEYWORDS=~amd64 ~ppc ~ppc64 ~x86 ~amd64-fbsd ~x86-fbsd ~amd64-linux ~x86-linux ~x64-macos
+LICENSE=BSD
+RDEPEND=>=virtual/jre-1.6 dev-java/bcprov:0[test?] dev-java/bcpkix:0[test?] dev-java/sun-jaf:0 dev-java/junit:0 dev-java/oracle-javamail:0 >=dev-java/java-config-2.2.0 source? ( app-arch/zip )
+RESTRICT=test
+SLOT=0
+SRC_URI=http://www.bouncycastle.org/download/bcmail-jdk15on-152.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-pkg-2	1889f7787714c5f7e3b5bb1c2be07c1f	java-pkg-simple	28dc6c3e6fa8ed51b88360dfd5fee53e	java-utils-2	240e3f28c6b42b9f36d3c36b8b27fbb2	multilib	62927b3db3a589b0806255f3a002d5d3	toolchain-funcs	42408102d713fbad60ca21349865edb4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=594e84bb7424c03a5665fca16d2d3790
